--- a/src/sass/_addNewTask.scss
+++ b/src/sass/_addNewTask.scss
@@ -38,8 +38,14 @@
     font-size: 2rem;
     transition: 0.2s;
 
-    &:hover {
+    &:active {
       background-color: #80ff85;
+    }
+
+    @include mq(1024px) {
+      &:hover {
+        background-color: #80ff85;
+      }
     }
   }
 }
